--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+pkg/
+
+# Berkshelf
+.vagrant
+/cookbooks
+Berksfile.lock
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
+
 tmp/*
 cookbooks/*
 test/kitchen/.kitchen
